    material installed. Closes: #517854
  * Same for zh_SG in Simplified Chinese task
  * Add accessibility packages to the gnome-desktop and kde-desktop
    tasks. Thanks to Samuel Thibault for the patch and leading the discussion
    Closes: #471410

  [ Joey Hess ]
  * Remove hibernate from laptop task. (Was already removed from desktop
    in favour of pm-utils.)

 -- Christian Perrier <bubulle@debian.org>  Mon, 09 Feb 2009 20:24:49 +0100

tasksel (2.78) unstable; urgency=low

  [ Translations of programs ]
  * Telugu added. Closes: #503417

  [ Translations of debconf templates ]
  * Telugu added. Closes: #503417

  [ Translations of tasks ]
  * Telugu added. Closes: #503417

  [ Christian Perrier ]
  * Add Telugu tasks. Closes: #505454

  [ Frans Pop ]
  * desktop, print-server: Use new cups packages. Closes: #505722

  [ Otavio Salvador ]
  * xfce-desktop: Apply patch from Yves-Alexis Perez <corsac@debian.org>
    to include dbus-x11. Closes: #510300

 -- Otavio Salvador <otavio@ossystems.com.br>  Thu, 22 Jan 2009 21:15:24 -0200

tasksel (2.77) unstable; urgency=low

  [ Christian Perrier ]
  * Add manpages-fr-extra to the french task. Closes: #504199

  [ Frans Pop ]
  * gnome-desktop: revert to the smaller gnome-desktop-environment package
    as key. Closes: #504659

 -- Otavio Salvador <otavio@ossystems.com.br>  Fri, 07 Nov 2008 14:56:26 -0200

tasksel (2.76) unstable; urgency=low

  [ Kenshi Muto ]
  * japanese-desktop, korean-desktop, chinese-s-desktop, chinese-t-desktop:
    Add poppler-data which is non-free. poppler-data is needed for these
    languages to display PostScript or PDF on poppler applications, such
    as evince. Closes: #497000

  [ Translations of debconf templates ]
  * Macedonian updated

  [ Translations of tasks ]
  * Hindi updated

  [ Christian Perrier ]
  * Properly tag the welsh-kde-desktop task. Closes: #500715
  * Do not use commas in Test-lang for the norwegian task