@@ -26,6 +26,7 @@ tasksel (2.79) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Remove hibernate from laptop task. (Was already removed from desktop
     in favour of pm-utils.)
+  * Install recommends by default.
 
  -- Christian Perrier <bubulle@debian.org>  Mon, 09 Feb 2009 20:24:49 +0100
 
